k8s/wshoto/networking/virtual-service-user-90-10.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wshoto-demo-user
spec:
  hosts:
    - user
  http:
  - route:
    - destination:
        host: wshoto-demo-user
        subset: v1
      weight: 90
    - destination:
        host: wshoto-demo-user
        subset: v2
      weight: 10
